chore: change homepage

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/CrazyOrr/loan-js/issues"
   },
-  "homepage": "https://github.com/CrazyOrr/loan-js",
+  "homepage": "https://ic.yolo.blue/",
   "keywords": [
     "interest",
     "loan",
