--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build": "rimraf dist && tsc && vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "lint:scripts": "eslint . --ext .ts",
+    "lint:scripts": "eslint .",
     "lint:styles": "stylelint ./**/*.{css,scss}",
     "format:scripts": "prettier . --write",
     "format:styles": "stylelint ./**/*.{css,scss} --fix",
@@ -49,16 +49,16 @@
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
     "@vitest/coverage-v8": "^2.0.1",
     "cspell": "^8.10.4",
     "dts-bundle-generator": "^9.5.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
@@ -72,6 +72,7 @@
     "stylelint-prettier": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.0-alpha.44",
     "vite": "^5.3.3",
     "vitest": "^2.0.1"
   }
