--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "format:styles": "stylelint ./**/*.{css,scss} --fix",
     "format": "npm run format:scripts && npm run format:styles",
     "spelling": "cspell \"**\"",
-    "prepare": "husky install && husky set .husky/pre-commit \"npx lint-staged\" && git add .husky/pre-commit",
+    "prepare": "husky",
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
   },
   "devDependencies": {
@@ -59,7 +59,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
     "postcss-scss": "^4.0.9",
