--- a/package.json
+++ b/package.json
@@ -51,29 +51,29 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.10",
-    "@vitest/coverage-v8": "^2.0.3",
-    "cspell": "^8.10.4",
+    "@types/node": "^20.14.13",
+    "@vitest/coverage-v8": "^2.0.5",
+    "cspell": "^8.13.0",
     "dts-bundle-generator": "^9.5.1",
-    "eslint": "^9.7.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.4",
     "lint-staged": "^15.2.7",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.40",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.8.1",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-sass-guidelines": "^12.0.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.1",
+    "stylelint-prettier": "^5.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0-alpha.44",
-    "vite": "^5.3.3",
-    "vitest": "^2.0.3"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.3.5",
+    "vitest": "^2.0.5"
   }
 }
