--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "@/*": ["./src/*"],
       "@@/*": ["./*"]
     },
-    "target": "ESNext",
+    "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
