--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "./**/*.{ts,html,json}": "npm run format:scripts",
-  "./**/*.{css,scss}": "npm run format:styles"
+  "*.{js,mjs,cjs,ts}": "eslint",
+  "*": "prettier --ignore-unknown --write"
 }
