--- a/package.json
+++ b/package.json
@@ -39,11 +39,8 @@
     "build": "rimraf dist && tsc && vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "lint:scripts": "eslint .",
-    "lint:styles": "stylelint ./**/*.{css,scss}",
-    "format:scripts": "prettier . --write",
-    "format:styles": "stylelint ./**/*.{css,scss} --fix",
-    "format": "npm run format:scripts && npm run format:styles",
+    "lint": "eslint .",
+    "format": "prettier . --write",
     "spelling": "cspell \"**\"",
     "prepare": "husky",
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
@@ -51,29 +48,24 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.13",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@types/node": "^22.14.1",
+    "@vitest/coverage-v8": "^3.1.1",
     "cspell": "^8.13.0",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.8.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.40",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.8.1",
-    "stylelint-config-recommended": "^14.0.1",
-    "stylelint-config-sass-guidelines": "^12.0.0",
-    "stylelint-order": "^6.0.4",
-    "stylelint-prettier": "^5.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.3.5",
-    "vitest": "^2.0.5"
+    "vite": "^6.3.2",
+    "vitest": "^3.1.1"
   }
 }
