build: add format:check script

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "test:coverage": "vitest --coverage",
     "lint": "eslint .",
     "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "spelling": "cspell \"**\"",
     "prepare": "husky",
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
