--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.8",
     "@eslint/js": "^9.7.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.1",
