--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,19 +2,21 @@ name: Publish Package to npm
 on:
   release:
     types: [published]
+permissions:
+  id-token: write # Required for OIDC
+  contents: read
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
         with:
-          node-version: "20.x"
+          node-version: 24
           cache: "npm"
           registry-url: "https://registry.npmjs.org"
+      - run: npm install -g npm@latest # Ensure npm 11.5.1 or later is installed
       - run: npm ci
       - run: npm test
       - run: npm run build
       - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
