remove unnecessary files configuration

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "default": "./dist/loan.js"
   },
   "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
+    "dist"
   ],
   "repository": {
     "type": "git",
