config prettier by editorconfig

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
+    "EditorConfig.EditorConfig",
     "streetsidesoftware.code-spell-checker",
     "Gruntfuggly.todo-tree",
     "vitest.explorer"
