--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "vite --host",
-    "build": "rimraf dist && tsc && vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
+    "build": "rimraf dist lib && tsc && vite build && api-extractor run --local --verbose",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "lint": "eslint .",
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.7.0",
+    "@microsoft/api-extractor": "^7.55.1",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.1",
     "@vitest/coverage-v8": "^4.0.13",
