--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: npm
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
